; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-index-disk.c_upgrade_header.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-index-disk.c_upgrade_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.metafile_header = type { i64, i32 }
%struct.metafile_header_old = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @upgrade_header(%struct.metafile_header* %0) #0 {
  %2 = alloca %struct.metafile_header*, align 8
  store %struct.metafile_header* %0, %struct.metafile_header** %2, align 8
  %3 = load %struct.metafile_header*, %struct.metafile_header** %2, align 8
  %4 = bitcast %struct.metafile_header* %3 to %struct.metafile_header_old*
  %5 = getelementptr inbounds %struct.metafile_header_old, %struct.metafile_header_old* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.metafile_header*, %struct.metafile_header** %2, align 8
  %8 = getelementptr inbounds %struct.metafile_header, %struct.metafile_header* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 8
  %9 = load %struct.metafile_header*, %struct.metafile_header** %2, align 8
  %10 = getelementptr inbounds %struct.metafile_header, %struct.metafile_header* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
